--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   orm:
     build: .
     volumes:
-      - ./cloud_db:/usr/src/app
+      - .:/usr/src/app
     deploy:
       resources:
         limits:
