--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ sqlalchemy = "^2.0.9"
 psycopg2 = "^2.9.6"
 bcrypt = "^4.0.1"
 python-dotenv = "^1.0.0"
+marshmallow = "3.19.0"
 
 
 [build-system]
